@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
+<ModSyncNinjaData>
+	<ID>f67a906b-9557-480c-b86c-6629a25fc6c4</ID>
+	<ModName>[sd] chickennest</ModName>
+	<Version>b18-1.0.0</Version>
+	<SaveBreaking>false</SaveBreaking>
+</ModSyncNinjaData>
